feat: preview 이미지 업로드 Content-Type 고정(image/png)(#28)